# scrim

./: .gitignore  Cargo.toml  John Bottle.player  README.md  install.bat  install.sh  save.json
lookups/: classes.json  races.json  spells.json  spells.py  subclasses.json  subclasses.py  weapons.json  weapons.py
src/: app.rs  event.rs  lib.rs  lookup.rs  main.rs  player.rs  tui.rs  ui.rs  update.rs
src/core/: mod.rs  scroll_provider.rs  settings.rs
src/player/: alignment.rs  background.rs  class.rs  funds.rs  mod.rs  race.rs  skills.rs  spells.rs  stats.rs  util.rs
src/widgets/: info_bar.rs  mod.rs  player_bar.rs  simple_popup.rs  stat_block.rs  tab_panel.rs  text_edit.rs  vec_popup.rs  vec_view.rs
