[package]
name = "scrim"
version = "0.1.0"
edition = "2021"

[package.metadata.parcel]
cargo-binaries = ["scrim"]
pkg-data = ["lookups/*"]

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
home = "0.5.5"
num-derive = "0.4.1"
num-traits = "0.2.17"
ratatui = "0.24.0"
serde = { version = "1.0.192", features = ["rc"] }
serde_derive = "1.0.192"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
strip-ansi-escapes = "0.2.0"
strum = "0.25.0"
strum_macros = "0.25.3"
